# url-shortener

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/libs/shared/src/shared/proto/: analytics_pb2.pyi  analytics_pb2_grpc.py  shortener_pb2_grpc.py
backend/proto/: shortener.proto
backend/services/analytics-service/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/services/analytics-service/alembic/: env.py
backend/services/analytics-service/src/analytics_service/: config.py  database.py  main.py  router.py
backend/services/analytics-service/tests/: conftest.py
backend/services/auth-service/alembic/: env.py
backend/services/auth-service/src/auth_service/: database.py  main.py  models.py  router.py
backend/services/auth-service/tests/: conftest.py
backend/services/redirect-service/: Dockerfile  pyproject.toml
backend/services/redirect-service/src/redirect_service/: cache.py  geo.py  grpc_clients.py  router.py
backend/services/redirect-service/tests/: test_redirect.py
backend/services/shortener-service/: alembic.ini
backend/services/shortener-service/alembic/: env.py
backend/services/shortener-service/alembic/versions/: 002_make_user_id_nullable.py
backend/services/shortener-service/src/shortener_service/: database.py  grpc_server.py  main.py  models.py  router.py  schemas.py  service.py
backend/services/shortener-service/tests/: conftest.py  test_shortener.py
docker/: init-db.sh
frontend/: Dockerfile  pnpm-lock.yaml
frontend/src/app/: globals.css  header.tsx  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/stats/[code]/: page.tsx
frontend/src/lib/: api.ts  auth.ts  schemas.ts
libs/shared/: pyproject.toml
libs/shared/src/shared/: __init__.py  dependencies.py  jwt.py
libs/shared/src/shared/proto/: analytics_pb2.py  analytics_pb2.pyi  shortener_pb2.py  shortener_pb2.pyi
nginx/: nginx.conf
proto/: analytics.proto
services/analytics-service/: Dockerfile
services/analytics-service/alembic/: env.py
services/analytics-service/alembic/versions/: 001_create_clicks_table.py  002_add_country_to_clicks.py
services/analytics-service/src/analytics_service/: grpc_server.py  main.py  models.py  service.py
services/analytics-service/tests/: conftest.py  test_analytics.py
services/auth-service/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 001_create_users_table.py
services/auth-service/src/auth_service/: config.py  main.py  models.py  schemas.py  service.py
services/auth-service/tests/: conftest.py  test_auth.py
services/redirect-service/src/redirect_service/: config.py  geo.py  grpc_clients.py  main.py  router.py
services/redirect-service/tests/: conftest.py  test_redirect.py
services/shortener-service/: Dockerfile  entrypoint.sh  pyproject.toml
services/shortener-service/alembic/: env.py
services/shortener-service/alembic/versions/: 001_create_urls_table.py
services/shortener-service/src/shortener_service/: config.py  grpc_server.py  main.py  models.py  qr.py  router.py  schemas.py  service.py
services/shortener-service/tests/: conftest.py  test_shortener.py
