[project]
name = "url-shortener"
version = "0.1.0"
description = "Microservice-based URL shortener"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "grpcio-tools>=1.68",
]

[tool.uv.workspace]
members = ["services/*", "libs/*"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["*_pb2.py", "*_pb2_grpc.py", "*_pb2.pyi"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4",
    "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF",
    "SIM", "TID", "TCH", "ARG", "ERA", "PGH", "PL", "TRY",
    "FLY", "PERF", "RUF",
]
ignore = ["S101", "TRY003", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"**/config.py" = ["S105"]
"**/tests/**" = ["PLR2004"]
"**/alembic/versions/*.py" = ["E402"]
"**/redirect_service/router.py" = ["RUF006"]

[tool.ruff.lint.isort]
known-first-party = [
    "shared",
    "auth_service",
    "shortener_service",
    "redirect_service",
    "analytics_service",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
