[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for URL shortener microservices"
requires-python = ">=3.12"
dependencies = [
    "pyjwt>=2.9",
    "grpcio>=1.68",
    "protobuf>=5.29",
    "fastapi>=0.115",
    "pydantic-settings>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
