[project]
name = "redirect-service"
version = "0.1.0"
description = "Fast HTTP redirect service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "redis>=5.2",
    "grpcio>=1.68",
    "geoip2>=4.8",
    "pydantic-settings>=2.7",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redirect_service"]
